# Normative-Documents

./: .commitlintrc.ts  .editorconfig  .gitattributes  .gitignore  .lintstagedrc  .markdownlint.yaml  .prettierignore  ChangeLog  Dockerfile  Dockerfile.yml  Makefile  README.md  System Architecture Model.archimate  gulpfile.js  package-lock.json  package.json  pyproject.toml  releaserc.toml  requirements.dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.husky/: commit-msg  pre-commit  pre-commit.sh  terminal.sh
.obsidian/: app.json  community-plugins.json  graph.json  starred.json  templates.json  workspace.json
.obsidian/plugins/OA-file-hider/: data.json
.obsidian/plugins/dataview/: data.json  main.js
.obsidian/plugins/dbfolder/: manifest.json
.obsidian/plugins/obsidian-filename-heading-sync/: data.json
.obsidian/plugins/obsidian-linter/: main.js  styles.css
Building Blocks/: Building Blocks.md
Checklists/Services/Digital Softwares/: Office Softwares.md
Operations/: rootdir.sh
Operations/Parameters/: create.sh
Parameters/environment/: 00-runtime.sh  01-stack.sh  02-git-hook.env
Roles/Engineering/: Engineering Role.md
Roles/Engineerings/: Development Role.md
Slice/: Building Blocks.md  Externals.md  Viewpoints.md
Source/Taxonomy/: conf.py  index.md
Specification/: SRD - Stakeholder Requirements Document.md
Taxonomy/: README.md
Taxonomy/Architecture/: Architecture.md  Architecture.ts
Taxonomy/Engineering/: Requirement Engineering.md  Software Engineering.md
Tools/: Tools.md
Viewpoints/: README.md
(+107 files in other folders)
